@@ -287,27 +287,32 @@ class Tx_Buechertransport_Controller_ProvinceController extends Tx_Extbase_MVC_C
 	/**
 	 * Scheduler action: geocode
 	 *
-	 * @param Tx_Buechertransport_Command_ImportCommandController $obj
+	 * @param Tx_Buechertransport_Command_GeocodeCommandController $obj
 	 * @return boolean
 	 */
-	public function geocodeAction(Tx_Buechertransport_Command_ImportCommandController &$obj) {
+	public function geocodeAction(Tx_Buechertransport_Command_GeocodeCommandController &$obj) {
+		t3lib_div::devLog('Geocode-Task: Success action call' , 'buechertransport', -1);
+
 		$success = FALSE;
 		$addresses = array();
 		$datamap = array();
 		$nkwlib = new tx_nkwlib();
+		// t3lib_div::devLog('Geocode-Task: Successful nkwlib instantiation' , 'buechertransport', -1);
 
 		// Get all entries with empty geocodecache-field
 		$rows = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(
 			"uid, name",
 			"tx_buechertransport_domain_model_city",
-			"geocode = '' " . t3lib_Befunc::BEenableFields('tx_buechertransport_domain_model_city') . t3lib_Befunc::deleteClause('tx_buechertransport_domain_model_city'), "", "uid ASC", ""
+			"geocode = '' AND lat = '' AND lng = '' " . t3lib_Befunc::BEenableFields('tx_buechertransport_domain_model_city') . t3lib_Befunc::deleteClause('tx_buechertransport_domain_model_city'), "", "uid ASC", ""
 		);
 
 		$tce = t3lib_div::makeInstance('t3lib_TCEmain');
+		// t3lib_div::devLog('Geocode-Task: Successful TCE instantiation' , 'buechertransport', -1);
 		t3lib_div::loadTCA('buechertransport');
+		// t3lib_div::devLog('Geocode-Task: Loaded Successful TCA' , 'buechertransport', -1);
+
 		if (!empty($rows)) {
 			foreach ($rows as $row) {
-				// Get latlng
 				$address = $row["name"];
 				if (empty($addresses[$address]))	{
 					$geo = $nkwlib->geocodeAddress($address);
@@ -316,49 +321,40 @@ class Tx_Buechertransport_Controller_ProvinceController extends Tx_Extbase_MVC_C
 						$lng = $geo["results"][0]["geometry"]["location"]["lng"];
 						$coords = $lat . ',' . $lng;
 						$datamap['tx_buechertransport_domain_model_city'][$row['uid']] = array(
-							'geocode' => $coords
+							'geocode' => $coords, 'lat' => $lat, 'lng' => $lng
 						);
-						$addresses[$address] = $coords;
+						$addresses[$address] = array('geocode' => $coords, 'lat' => $lat, 'lng' => $lng);
 						$success = TRUE;
 					}	else	{
 						$datamap['tx_buechertransport_domain_model_city'][$row['uid']] = array(
-							'geocode' => ''
+							'geocode' => '', 'lat' => '', 'lng' => ''
 						);
+						// t3lib_div::devLog('Geocode-Task: ' . $row['name'] . 'could not be geocoded.' , 'buechertransport', 3);
 					}
+				// Already geocoded
 				}	else	{
 					$datamap['tx_buechertransport_domain_model_city'][$row['uid']] = array(
-							'geocode' => $addresses[$address]
+						'geocode' => $addresses[$address]['geocode'],
+						'lat' => $addresses[$address]['lat'],
+						'lng' => $addresses[$address]['lng']
 					);
 					$success = TRUE;
 				}
 			}
-#			$nkwlib->dprint($datamap);
-
-/*			if (!empty($rows)) {
-				$tce = t3lib_div::makeInstance('t3lib_TCEmain');
-				foreach ($rows as $field) {
-					$datamap['tt_address'][$field['uid']] = array(
-						'tx_dsschedgmaps_geocodecache' => 'undefined',
-					);
-				}
-			}
-			$tce->start($datamap,array());
-			$tce->process_datamap();
-			$success = TRUE;
-*/
+			// t3lib_div::devLog('Geocode-Task: All geocodes retrieved.' , 'buechertransport', -1);
 
 			$tce->stripslashes_values = 0;
 			$tce->start($datamap, array());
 			$tce->process_datamap();
+			// t3lib_div::devLog('Geocode-Task: Datamap process -> Database update successful.' , 'buechertransport', -1);
 			
 			if(count($tce->errorLog) != 0)	{
 				$nkwlib->dprint($tce->errorLog);	
 			}
 			unset($datamap);
 		}	else	{	// Error: Log the task
-			t3lib_div::devLog('[scheduler: Google Maps: Address cache]: Fail. Database already up-to-date.', 'dsschedgmaps', 3);
+			t3lib_div::devLog('Geocode-Task:: Fail. Database already up-to-date.', 'buechertransport', 3);
 		}
-
 		return $success;
 	}
 
