@@ -2,3 +2,7 @@
 	<f:translate key="tx_buechertransport_domain_model_city.name" /> <span class="required">(required)</span>
 </label><br />
 	<f:form.textfield property="name" /><br />
+<label for="geocode">
+	<f:translate key="tx_buechertransport_domain_model_city.geocode" />
+</label><br />
+	<f:form.textfield property="geocode" /><br />
