@@ -19,6 +19,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <table  class="tx_buechertransport" >
 	<tr>
 		<th><f:translate key="tx_buechertransport_domain_model_city.name" /></th>
+		<th><f:translate key="tx_buechertransport_domain_model_city.geocode" /></th>
 		<th> </th>
 		<th> </th>
 	</tr>
@@ -26,6 +27,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 	<f:for each="{cities}" as="city">
 		<tr>
 			<td><f:link.action action="show" arguments="{city : city}"> {city.name}</f:link.action></td>
+			<td><f:link.action action="show" arguments="{city : city}"> {city.geocode}</f:link.action></td>
 			<td><f:link.action action="edit" arguments="{city : city}">Edit</f:link.action></td>
 			<td><f:link.action action="delete" arguments="{city : city}">Delete</f:link.action></td>
 		</tr>
