@@ -134,29 +134,29 @@ function initialize() {
 <f:for each="{province.reachables}" as="city" iteration="Iterator">
 	// Set marker
 	city[{Iterator.index}] = "{city.name}";
-	geocoder.geocode( { 'address': city[{Iterator.index}] + " City" }, function(results, status) {
-		if (status == google.maps.GeocoderStatus.OK) {
-			if (status != google.maps.GeocoderStatus.ZERO_RESULTS) {
-				latlng[{Iterator.index}] = results[0].geometry.location;
-				marker[{Iterator.index}] = new google.maps.Marker({'position': latlng[{Iterator.index}], 'map': map, 'title': city[{Iterator.index}]});
+	// geocoder.geocode( { 'address': city[{Iterator.index}] + " City" }, function(results, status) {
+	// 	if (status == google.maps.GeocoderStatus.OK) {
+	// 		if (status != google.maps.GeocoderStatus.ZERO_RESULTS) {
+	latlng[{Iterator.index}] = "{city.geocode}";
+	marker[{Iterator.index}] = new google.maps.Marker({'position': latlng[{Iterator.index}], 'map': map, 'title': city[{Iterator.index}]});
 
-				// Draw line
-				lineCoordinates[{Iterator.index}] = [
-			  		provinceCoord,
-			  		latlng[{Iterator.index}]
-				];
-				line[{Iterator.index}] = new google.maps.Polyline({
-					'path': lineCoordinates[{Iterator.index}],
-					'icons': [{
-						'icon': lineSymbol,
-						'offset': '100%'
-					}],
-					'map': map
-				});
-				line[{Iterator.index}].setOptions(polyOptions);
-			}
-		}
+	// Draw line
+	lineCoordinates[{Iterator.index}] = [
+  		provinceCoord,
+  		latlng[{Iterator.index}]
+	];
+	line[{Iterator.index}] = new google.maps.Polyline({
+		'path': lineCoordinates[{Iterator.index}],
+		'icons': [{
+			'icon': lineSymbol,
+			'offset': '100%'
+		}],
+		'map': map
 	});
+	line[{Iterator.index}].setOptions(polyOptions);
+	// 		}
+	// 	}
+	// });
 </f:for>
 
 	// // Set up and create the infowindow
