@@ -23,7 +23,7 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 		$_EXTKEY,
 		'Scheduler',
 		array(
-			'Province' => 'import, create, update, delete',
+			'Province' => 'import, geocode, create, update, delete',
 			'City' => 'create, update, delete',
 			'Library' => 'create, update, delete'
 		)
@@ -31,6 +31,7 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 
 // Extbase-Scheduler for importing existing data
 $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['extbase']['commandControllers'][] = 'Tx_Buechertransport_Command_ImportCommandController';
+$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['extbase']['commandControllers'][] = 'Tx_Buechertransport_Command_GeocodeCommandController';
 
 // Hooks
 $TYPO3_CONF_VARS['EXTCONF']['nkwsubmenu']['extendTOC'][$_EXTKEY] = 'EXT:'.$_EXTKEY.'/Classes/Utility/SidebarUtility.php:Tx_Buechertransport_Utility_SidebarUtility->hookFunc';
