@@ -52,6 +52,7 @@ CREATE TABLE tx_buechertransport_domain_model_city (
 	province int(11) unsigned DEFAULT '0' NOT NULL,
 
 	name varchar(255) DEFAULT '' NOT NULL,
+	geocode varchar(255) DEFAULT '' NOT NULL,
 	libraries int(11) unsigned DEFAULT '0' NOT NULL,
 
 	tstamp int(11) unsigned DEFAULT '0' NOT NULL,
